Major update + test

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,22 +1,17 @@
-CROSS_COMPILE = arm-intellio-linux-gnueabihf-
 CC = g++
-CC_FLAGS = -O3 -Wall
+CC_FLAGS = -O3 -Wall -std=c++14 -I../src
 LD_FLAGS = -lpthread
-NAME = thread_utils
-SOURCE_DIR = ./
+NAME = thread_utils_test
+SOURCE_DIR = ../
 SOURCE_FILES = $(shell find $(SOURCE_DIR) -type f -iregex '.*\.\(c\|i\|ii\|cc\|cp\|cxx\|cpp\|CPP\|c++\|C\|s\|S\|sx\)' )
-OUTPUT_DIR = ./test
+OUTPUT_DIR = ./
 
 all: $(OUTPUT_DIR) $(SOURCE_FILES) 
 	$(CC) $(CC_FLAGS) $(SOURCE_FILES) -o "$(OUTPUT_DIR)/$(NAME)" $(LD_FLAGS)
 
-arm: $(OUTPUT_DIR) $(SOURCE_FILES)
-	$(CROSS_COMPILE)$(CC) $(CC_FLAGS) $(SOURCE_FILES) -o "$(OUTPUT_DIR)/$(NAME)_arm" $(LD_FLAGS)
-
-
 .PHONY: clean
 clean: 
-	rm -r $(OUTPUT_DIR)
+	rm $(OUTPUT_DIR)/$(NAME)
 
 $(OUTPUT_DIR):
 	mkdir $(OUTPUT_DIR)
